# GhostCom

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: release.yml
docs/: architecture.md  cross-platform.md  protocol.md  public-release-audit.md  relay-security.md  roadmap.md  security-checklist.md  security-review-2026-05-25.md  threat-model.md
install/: install.ps1  install.sh
release/: signing-public-key.txt
site/: Cargo.toml  Dockerfile  README.md  fly.toml
site/src/: app.rs  client_ip.rs  config.rs  install_scripts.rs  main.rs  page.rs  rate_limit.rs
site/src/relay/: mod.rs  protocol.rs  state.rs
site/src/rendezvous/: mod.rs  protocol.rs  state.rs
src/: cli.rs  main.rs  relay.rs  rendezvous.rs
src/protocol/: frame.rs
src/security/: certificate.rs  fingerprint.rs  mod.rs  verifier.rs
src/terminal/: line_ui.rs  mod.rs
src/transport/: mod.rs
