[package]
name = "ghostcom"
version = "0.1.0"
edition = "2024"
license = "UNLICENSED"
publish = false

[[bin]]
name = "ghstprtcl"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
crossterm = "0.28"
ed25519-dalek = "2.2"
futures-util = "0.3"
base64 = "0.22"
rand = "0.9"
rcgen = "0.12"
rustls = "0.23"
rustls-pki-types = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hmac = "0.12"
snow = "0.10"
subtle = "2.6"
tokio = { version = "1.48", features = ["full"] }
tokio-rustls = "0.26"
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-webpki-roots"] }
zeroize = "1.8"
