[package]
name = "ghostcom-site"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
tokio-tungstenite = "0.29"
