[package]
name = "ghostcom-site"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
ed25519-dalek = "2.2"
futures-util = "0.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.48", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
zeroize = "1.8"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tokio-tungstenite = "0.29"
